Remove legacy Cosyma references and integration adapter
- Replace 'Cosyma Unified Info-System' with 'Reki Control Panel' in documentation
- Update localStorage keys from 'cosyma_' to 'reki_' prefix
- Remove integration-adapter.js (no iframe integration needed)
- Update form titles and references

--- a/packages/frontend/public/flower-form/index.html
+++ b/packages/frontend/public/flower-form/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Cosyma — Форма осмотра (MVP UI)</title>
+      <title>Reki — Форма осмотра (MVP UI)</title>
   <link rel="stylesheet" href="css/styles.css">
   <!-- Chart.js для радарной диаграммы -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <header>
-      <h1>Cosyma — Тесты оценки пациента (MVP)</h1>
+      <h1>Reki — Тесты оценки пациента (MVP)</h1>
       <div class="toolbar">
         <span class="pill"><span class="muted">Пациент</span>
           <select id="patientSelect">
@@ -646,6 +646,5 @@
 
   <script src="js/patients.js"></script>
   <script src="js/app.js"></script>
-  <script src="js/integration-adapter.js"></script>
 </body>
 </html>
